Minor Changes, Video updated